@@ -519,15 +519,16 @@ set.var.tomogram-thickness-in-z.a=96
 set.var.tomogram-thickness-in-z.b=84
 set.var.x-axis-tilt.a=2.03
 set.var.x-axis-tilt.b=0.21
-set.var.x-axis-tilt-simple-align.a=2.04
+set.var.x-axis-tilt-simple-align.a=
+set.var.x-axis-tilt-simple-align.b=
 set.var.tomogram-thickness-in-z-patch-tracking.a=128
 set.var.tomogram-thickness-in-z-patch-tracking.b=144
 #PostProc
 set.var.scaling-z-min=32
-set.var.scaling-z-min-simple-align=32
+set.var.scaling-z-min-simple-align=
 set.var.scaling-z-max=64
-set.var.scaling-z-max-simple-align=64
-set.var.z-simple-align=128
+set.var.scaling-z-max-simple-align=
+set.var.z-simple-align=
 set.interface.Recon=
 
 [dataset = unicross]
